<!--
  ~     MyDictionary  Copyright (C) 2018  Nikhil Soni
  ~     This program comes with ABSOLUTELY NO WARRANTY; for details type `show w'.
  ~     This is free software, and you are welcome to redistribute it
  ~     under certain conditions; type `show c' for details.
  ~
  ~ The hypothetical commands `show w' and `show c' should show the appropriate
  ~ parts of the General Public License.  Of course, your program's commands
  ~ might be different; for a GUI interface, you would use an "about box".
  ~
  ~   You should also get your employer (if you work as a programmer) or school,
  ~ if any, to sign a "copyright disclaimer" for the program, if necessary.
  ~ For more information on this, and how to apply and follow the GNU GPL, see
  ~ <http://www.gnu.org/licenses/>.
  ~
  ~   The GNU General Public License does not permit incorporating your program
  ~ into proprietary programs.  If your program is a subroutine library, you
  ~ may consider it more useful to permit linking proprietary applications with
  ~ the library.  If this is what you want to do, use the GNU Lesser General
  ~ Public License instead of this License.  But first, please read
  ~ <http://www.gnu.org/philosophy/why-not-lgpl.html>.
  -->

<resources>
    <string name="app_name">My Dictionary</string>
    <string name="warning">Warning</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>

    <!-- DELETE WORD-->
    <string name="deleteMessage">Are you sure you want to delete this word ?</string>
    <string name="delete">Delete</string>
    <!-- -->


    <!-- ERROR MESSAGE-->
    <string name="errorNoWord">Enter a word</string>
    <string name="errorNoMeaning">Enter a meaning of the word</string>
    <string name="errorNoActivityToHandleChrome">No activity found to launch the task</string>
    <!-- -->

    <!-- MENU STRING -->
    <string name="menuListSearch">Search</string>
    <string name="menuListSettings">Settings</string>
    <string name="menuListAbout">About</string>
    <!-- -->

    <!-- POPUP MENU STRING -->
    <string name="popUpMenuEdit">Edit</string>
    <string name="popUpMenuDelete">Delete</string>

    <!-- aboutStrings-->
    <string name="aboutLibraries">Third party library used</string>
    <string name="aboutLicense">License Info</string>
    <string name="aboutLicenseUrl" translatable="false">https://github.com/nsnikhil/MyDictionary/blob/master/LICENSE</string>
    <string name="aboutApp">My Personal Dictionary</string>

    <string name="aboutNikhil" translatable="false">This app is written by Nikhil Soni\n
                   <a href="https://twitter.com/imnsnik">Twitter</a>|<a href="https://github.com/nsnikhil/">Github</a> </string>

    <string name="aboutSourceCode" translatable="false">The source code is available on <a href="https://github.com/nsnikhil/MyDictionary">Github</a></string>

    <!-- NEW ENTRY DIALOG -->
    <string name="newEntryDialogTitle">Add Word</string>
    <string name="newEntryDialogUpdateTitle">Edit Word</string>
    <string name="newEntryWordHint">Word</string>
    <string name="newEntryMeaningHint">Meaning</string>
    <string name="newEntryCancel">Cancel</string>
    <string name="newEntryAdd">Add</string>
    <!-- -->

    <!-- BUNDLE KEY-->
    <string name="bundleDictionaryEntity">bundleDictionaryEntity</string>
    <!-- -->


    <!-- PREFERENCES-->
    <string name="preferenceCategoryInterface">Interface</string>
    <string name="preferenceDarkModeTitle">Dark Mode</string>
    <string name="preferenceDarkModeSummary">Disabled</string>
    <string name="preferenceDarkModeKey">darkModeKey</string>

    <string name="preferenceCategoryData">Data</string>
    <string name="preferenceBackGroundSyncTitle">Background Sync</string>
    <string name="preferenceBackGroundSyncSummary">Disabled</string>
    <string name="preferenceBackGroundSyncKey">backGroundSyncKey</string>

    <string name="preferenceCategoryGeneral">General</string>
    <string name="preferenceSortByTitle">Sort By</string>
    <string name="preferenceSortBySummary">Disabled</string>
    <string name="preferenceSortByKey">sortByKey</string>
    <string-array name="preferenceSortByEntries">
        <item>Date</item>
        <item>Alphabetically</item>
    </string-array>
    <!-- -->

</resources>

