<?xml version="1.0" encoding="utf-8"?><!--
  ~     MyDictionary  Copyright (C) 2018  Nikhil Soni
  ~     This program comes with ABSOLUTELY NO WARRANTY; for details type `show w'.
  ~     This is free software, and you are welcome to redistribute it
  ~     under certain conditions; type `show c' for details.
  ~
  ~ The hypothetical commands `show w' and `show c' should show the appropriate
  ~ parts of the General Public License.  Of course, your program's commands
  ~ might be different; for a GUI interface, you would use an "about box".
  ~
  ~   You should also get your employer (if you work as a programmer) or school,
  ~ if any, to sign a "copyright disclaimer" for the program, if necessary.
  ~ For more information on this, and how to apply and follow the GNU GPL, see
  ~ <http://www.gnu.org/licenses/>.
  ~
  ~   The GNU General Public License does not permit incorporating your program
  ~ into proprietary programs.  If your program is a subroutine library, you
  ~ may consider it more useful to permit linking proprietary applications with
  ~ the library.  If this is what you want to do, use the GNU Lesser General
  ~ Public License instead of this License.  But first, please read
  ~ <http://www.gnu.org/philosophy/why-not-lgpl.html>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/preferenceCategoryInterface">

        <SwitchPreference
            android:checked="false"
            android:enabled="false"
            android:key="@string/preferenceDarkModeKey"
            android:summary="@string/preferenceDarkModeSummary"
            android:title="@string/preferenceDarkModeTitle" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preferenceCategoryData">

        <CheckBoxPreference
            android:checked="false"
            android:enabled="false"
            android:key="@string/preferenceBackGroundSyncKey"
            android:summary="@string/preferenceBackGroundSyncSummary"
            android:title="@string/preferenceBackGroundSyncTitle" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preferenceCategoryGeneral">

        <ListPreference
            android:enabled="false"
            android:entries="@array/preferenceSortByEntries"
            android:entryValues="@array/preferenceSortByEntries"
            android:key="@string/preferenceSortByKey"
            android:summary="@string/preferenceSortBySummary"
            android:title="@string/preferenceSortByTitle" />

    </PreferenceCategory>

</PreferenceScreen>